// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: children transform > components 1`] = `
"
export function render(_ctx) {
  const n0 = n7.firstChild
  const n2 = n0.nextSibling
  const n1 = n2.firstChild
  const n3 = n2.nextSibling
  const n5 = n3.nextSibling
  const n4 = n5.firstChild
  const n6 = n5.nextSibling
  return [n0, n1, n2, n3, n4, n5, n6, n7]
}"
`;

exports[`compiler: children transform > components 2`] = `
{
  "block": {
    "dynamic": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "flags": 1,
              "id": 0,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 1,
                },
              ],
              "flags": 1,
              "id": 2,
            },
            {
              "children": [],
              "flags": 1,
              "id": 3,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 4,
                },
              ],
              "flags": 1,
              "id": 5,
            },
            {
              "children": [],
              "flags": 1,
              "id": 6,
            },
          ],
          "flags": 1,
          "id": 7,
        },
      ],
      "flags": 1,
    },
    "effect": [],
    "node": {
      "children": [
        {
          "attributes": [],
          "children": [
            {
              "data": "
        ",
              "end": 14,
              "raw": "
        ",
              "start": 5,
              "type": "Text",
            },
            {
              "attributes": [],
              "children": [
                {
                  "end": 26,
                  "expression": Node {
                    "end": 24,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 18,
                        "line": 2,
                      },
                      "start": Position {
                        "column": 15,
                        "line": 2,
                      },
                    },
                    "name": "foo",
                    "start": 21,
                    "type": "Identifier",
                  },
                  "start": 19,
                  "type": "MustacheTag",
                },
              ],
              "end": 32,
              "name": "Foo",
              "start": 14,
              "type": "InlineComponent",
            },
            {
              "data": "
        ",
              "end": 41,
              "raw": "
        ",
              "start": 32,
              "type": "Text",
            },
            {
              "attributes": [],
              "children": [
                {
                  "attributes": [],
                  "children": [],
                  "end": 53,
                  "name": "Baz",
                  "start": 46,
                  "type": "InlineComponent",
                },
              ],
              "end": 59,
              "name": "Bar",
              "start": 41,
              "type": "InlineComponent",
            },
            {
              "data": "
      ",
              "end": 66,
              "raw": "
      ",
              "start": 59,
              "type": "Text",
            },
          ],
          "end": 72,
          "name": "div",
          "start": 0,
          "type": "Element",
        },
      ],
      "components": [],
      "directives": [],
      "helpers": Set {},
      "source": "<div>
        <Foo>{ foo }</Foo>
        <Bar><Baz /></Bar>
      </div>",
      "temps": 0,
      "type": 0,
    },
    "operation": [],
    "returns": [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
    ],
    "type": 1,
  },
  "component": Set {},
  "directive": Set {},
  "node": {
    "children": [
      {
        "attributes": [],
        "children": [
          {
            "data": "
        ",
            "end": 14,
            "raw": "
        ",
            "start": 5,
            "type": "Text",
          },
          {
            "attributes": [],
            "children": [
              {
                "end": 26,
                "expression": Node {
                  "end": 24,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 18,
                      "line": 2,
                    },
                    "start": Position {
                      "column": 15,
                      "line": 2,
                    },
                  },
                  "name": "foo",
                  "start": 21,
                  "type": "Identifier",
                },
                "start": 19,
                "type": "MustacheTag",
              },
            ],
            "end": 32,
            "name": "Foo",
            "start": 14,
            "type": "InlineComponent",
          },
          {
            "data": "
        ",
            "end": 41,
            "raw": "
        ",
            "start": 32,
            "type": "Text",
          },
          {
            "attributes": [],
            "children": [
              {
                "attributes": [],
                "children": [],
                "end": 53,
                "name": "Baz",
                "start": 46,
                "type": "InlineComponent",
              },
            ],
            "end": 59,
            "name": "Bar",
            "start": 41,
            "type": "InlineComponent",
          },
          {
            "data": "
      ",
            "end": 66,
            "raw": "
      ",
            "start": 59,
            "type": "Text",
          },
        ],
        "end": 72,
        "name": "div",
        "start": 0,
        "type": "Element",
      },
    ],
    "components": [],
    "directives": [],
    "helpers": Set {},
    "source": "<div>
        <Foo>{ foo }</Foo>
        <Bar><Baz /></Bar>
      </div>",
    "temps": 0,
    "type": 0,
  },
  "source": "<div>
        <Foo>{ foo }</Foo>
        <Bar><Baz /></Bar>
      </div>",
  "template": [],
  "type": 0,
}
`;

exports[`compiler: children transform > native elements 1`] = `
"
export function render(_ctx) {
  const n0 = n10.firstChild
  const n5 = n0.nextSibling
  const n1 = n5.firstChild
  const n3 = n1.nextSibling
  const n2 = n3.firstChild
  const n4 = n3.nextSibling
  const n6 = n5.nextSibling
  const n8 = n6.nextSibling
  const n7 = n8.firstChild
  const n9 = n8.nextSibling
  return [n0, n1, n2, n3, n4, n5, n6, n7, n8, n9, n10]
}"
`;

exports[`compiler: children transform > native elements 2`] = `
{
  "block": {
    "dynamic": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "flags": 1,
              "id": 0,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 1,
                },
                {
                  "children": [
                    {
                      "children": [],
                      "flags": 1,
                      "id": 2,
                    },
                  ],
                  "flags": 1,
                  "id": 3,
                },
                {
                  "children": [],
                  "flags": 1,
                  "id": 4,
                },
              ],
              "flags": 1,
              "id": 5,
            },
            {
              "children": [],
              "flags": 1,
              "id": 6,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 7,
                },
              ],
              "flags": 1,
              "id": 8,
            },
            {
              "children": [],
              "flags": 1,
              "id": 9,
            },
          ],
          "flags": 1,
          "id": 10,
        },
      ],
      "flags": 1,
    },
    "effect": [],
    "node": {
      "children": [
        {
          "attributes": [],
          "children": [
            {
              "data": "
        ",
              "end": 14,
              "raw": "
        ",
              "start": 5,
              "type": "Text",
            },
            {
              "attributes": [],
              "children": [
                {
                  "data": "
          ",
                  "end": 30,
                  "raw": "
          ",
                  "start": 19,
                  "type": "Text",
                },
                {
                  "attributes": [],
                  "children": [
                    {
                      "data": "Hello",
                      "end": 38,
                      "raw": "Hello",
                      "start": 33,
                      "type": "Text",
                    },
                  ],
                  "end": 42,
                  "name": "p",
                  "start": 30,
                  "type": "Element",
                },
                {
                  "data": "
        ",
                  "end": 51,
                  "raw": "
        ",
                  "start": 42,
                  "type": "Text",
                },
              ],
              "end": 57,
              "name": "div",
              "start": 14,
              "type": "Element",
            },
            {
              "data": "
        ",
              "end": 66,
              "raw": "
        ",
              "start": 57,
              "type": "Text",
            },
            {
              "attributes": [],
              "children": [
                {
                  "data": "World",
                  "end": 74,
                  "raw": "World",
                  "start": 69,
                  "type": "Text",
                },
              ],
              "end": 78,
              "name": "p",
              "start": 66,
              "type": "Element",
            },
            {
              "data": "
      ",
              "end": 85,
              "raw": "
      ",
              "start": 78,
              "type": "Text",
            },
          ],
          "end": 91,
          "name": "div",
          "start": 0,
          "type": "Element",
        },
      ],
      "components": [],
      "directives": [],
      "helpers": Set {},
      "source": "<div>
        <div>
          <p>Hello</p>
        </div>
        <p>World</p>
      </div>",
      "temps": 0,
      "type": 0,
    },
    "operation": [],
    "returns": [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
    ],
    "type": 1,
  },
  "component": Set {},
  "directive": Set {},
  "node": {
    "children": [
      {
        "attributes": [],
        "children": [
          {
            "data": "
        ",
            "end": 14,
            "raw": "
        ",
            "start": 5,
            "type": "Text",
          },
          {
            "attributes": [],
            "children": [
              {
                "data": "
          ",
                "end": 30,
                "raw": "
          ",
                "start": 19,
                "type": "Text",
              },
              {
                "attributes": [],
                "children": [
                  {
                    "data": "Hello",
                    "end": 38,
                    "raw": "Hello",
                    "start": 33,
                    "type": "Text",
                  },
                ],
                "end": 42,
                "name": "p",
                "start": 30,
                "type": "Element",
              },
              {
                "data": "
        ",
                "end": 51,
                "raw": "
        ",
                "start": 42,
                "type": "Text",
              },
            ],
            "end": 57,
            "name": "div",
            "start": 14,
            "type": "Element",
          },
          {
            "data": "
        ",
            "end": 66,
            "raw": "
        ",
            "start": 57,
            "type": "Text",
          },
          {
            "attributes": [],
            "children": [
              {
                "data": "World",
                "end": 74,
                "raw": "World",
                "start": 69,
                "type": "Text",
              },
            ],
            "end": 78,
            "name": "p",
            "start": 66,
            "type": "Element",
          },
          {
            "data": "
      ",
            "end": 85,
            "raw": "
      ",
            "start": 78,
            "type": "Text",
          },
        ],
        "end": 91,
        "name": "div",
        "start": 0,
        "type": "Element",
      },
    ],
    "components": [],
    "directives": [],
    "helpers": Set {},
    "source": "<div>
        <div>
          <p>Hello</p>
        </div>
        <p>World</p>
      </div>",
    "temps": 0,
    "type": 0,
  },
  "source": "<div>
        <div>
          <p>Hello</p>
        </div>
        <p>World</p>
      </div>",
  "template": [],
  "type": 0,
}
`;

exports[`compiler: children transform > sibling references 1`] = `
"
export function render(_ctx) {
  const n0 = n11.firstChild
  const n2 = n0.nextSibling
  const n1 = n2.firstChild
  const n3 = n2.nextSibling
  const n4 = n3.nextSibling
  const n5 = n4.nextSibling
  const n6 = n5.nextSibling
  const n7 = n6.nextSibling
  const n9 = n7.nextSibling
  const n8 = n9.firstChild
  const n10 = n9.nextSibling
  return [n0, n1, n2, n3, n4, n5, n6, n7, n8, n9, n10, n11]
}"
`;

exports[`compiler: children transform > sibling references 2`] = `
{
  "block": {
    "dynamic": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "flags": 1,
              "id": 0,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 1,
                },
              ],
              "flags": 1,
              "id": 2,
            },
            {
              "children": [],
              "flags": 1,
              "id": 3,
            },
            {
              "children": [],
              "flags": 1,
              "id": 4,
            },
            {
              "children": [],
              "flags": 1,
              "id": 5,
            },
            {
              "children": [],
              "flags": 1,
              "id": 6,
            },
            {
              "children": [],
              "flags": 1,
              "id": 7,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 8,
                },
              ],
              "flags": 1,
              "id": 9,
            },
            {
              "children": [],
              "flags": 1,
              "id": 10,
            },
          ],
          "flags": 1,
          "id": 11,
        },
      ],
      "flags": 1,
    },
    "effect": [],
    "node": {
      "children": [
        {
          "attributes": [],
          "children": [
            {
              "data": "
        ",
              "end": 14,
              "raw": "
        ",
              "start": 5,
              "type": "Text",
            },
            {
              "attributes": [],
              "children": [
                {
                  "end": 26,
                  "expression": Node {
                    "end": 24,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 18,
                        "line": 2,
                      },
                      "start": Position {
                        "column": 13,
                        "line": 2,
                      },
                    },
                    "name": "first",
                    "start": 19,
                    "type": "Identifier",
                  },
                  "start": 17,
                  "type": "MustacheTag",
                },
              ],
              "end": 30,
              "name": "p",
              "start": 14,
              "type": "Element",
            },
            {
              "data": "
        ",
              "end": 39,
              "raw": "
        ",
              "start": 30,
              "type": "Text",
            },
            {
              "end": 49,
              "expression": Node {
                "end": 47,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 16,
                    "line": 3,
                  },
                  "start": Position {
                    "column": 10,
                    "line": 3,
                  },
                },
                "name": "second",
                "start": 41,
                "type": "Identifier",
              },
              "start": 39,
              "type": "MustacheTag",
            },
            {
              "data": "
        ",
              "end": 58,
              "raw": "
        ",
              "start": 49,
              "type": "Text",
            },
            {
              "end": 67,
              "expression": Node {
                "end": 65,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 15,
                    "line": 4,
                  },
                  "start": Position {
                    "column": 10,
                    "line": 4,
                  },
                },
                "name": "third",
                "start": 60,
                "type": "Identifier",
              },
              "start": 58,
              "type": "MustacheTag",
            },
            {
              "data": "
        ",
              "end": 76,
              "raw": "
        ",
              "start": 67,
              "type": "Text",
            },
            {
              "attributes": [],
              "children": [
                {
                  "end": 88,
                  "expression": Node {
                    "end": 86,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 18,
                        "line": 5,
                      },
                      "start": Position {
                        "column": 13,
                        "line": 5,
                      },
                    },
                    "name": "forth",
                    "start": 81,
                    "type": "Identifier",
                  },
                  "start": 79,
                  "type": "MustacheTag",
                },
              ],
              "end": 92,
              "name": "p",
              "start": 76,
              "type": "Element",
            },
            {
              "data": "
      ",
              "end": 99,
              "raw": "
      ",
              "start": 92,
              "type": "Text",
            },
          ],
          "end": 105,
          "name": "div",
          "start": 0,
          "type": "Element",
        },
      ],
      "components": [],
      "directives": [],
      "helpers": Set {},
      "source": "<div>
        <p>{ first }</p>
        { second }
        { third }
        <p>{ forth }</p>
      </div>",
      "temps": 0,
      "type": 0,
    },
    "operation": [],
    "returns": [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
    ],
    "type": 1,
  },
  "component": Set {},
  "directive": Set {},
  "node": {
    "children": [
      {
        "attributes": [],
        "children": [
          {
            "data": "
        ",
            "end": 14,
            "raw": "
        ",
            "start": 5,
            "type": "Text",
          },
          {
            "attributes": [],
            "children": [
              {
                "end": 26,
                "expression": Node {
                  "end": 24,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 18,
                      "line": 2,
                    },
                    "start": Position {
                      "column": 13,
                      "line": 2,
                    },
                  },
                  "name": "first",
                  "start": 19,
                  "type": "Identifier",
                },
                "start": 17,
                "type": "MustacheTag",
              },
            ],
            "end": 30,
            "name": "p",
            "start": 14,
            "type": "Element",
          },
          {
            "data": "
        ",
            "end": 39,
            "raw": "
        ",
            "start": 30,
            "type": "Text",
          },
          {
            "end": 49,
            "expression": Node {
              "end": 47,
              "loc": SourceLocation {
                "end": Position {
                  "column": 16,
                  "line": 3,
                },
                "start": Position {
                  "column": 10,
                  "line": 3,
                },
              },
              "name": "second",
              "start": 41,
              "type": "Identifier",
            },
            "start": 39,
            "type": "MustacheTag",
          },
          {
            "data": "
        ",
            "end": 58,
            "raw": "
        ",
            "start": 49,
            "type": "Text",
          },
          {
            "end": 67,
            "expression": Node {
              "end": 65,
              "loc": SourceLocation {
                "end": Position {
                  "column": 15,
                  "line": 4,
                },
                "start": Position {
                  "column": 10,
                  "line": 4,
                },
              },
              "name": "third",
              "start": 60,
              "type": "Identifier",
            },
            "start": 58,
            "type": "MustacheTag",
          },
          {
            "data": "
        ",
            "end": 76,
            "raw": "
        ",
            "start": 67,
            "type": "Text",
          },
          {
            "attributes": [],
            "children": [
              {
                "end": 88,
                "expression": Node {
                  "end": 86,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 18,
                      "line": 5,
                    },
                    "start": Position {
                      "column": 13,
                      "line": 5,
                    },
                  },
                  "name": "forth",
                  "start": 81,
                  "type": "Identifier",
                },
                "start": 79,
                "type": "MustacheTag",
              },
            ],
            "end": 92,
            "name": "p",
            "start": 76,
            "type": "Element",
          },
          {
            "data": "
      ",
            "end": 99,
            "raw": "
      ",
            "start": 92,
            "type": "Text",
          },
        ],
        "end": 105,
        "name": "div",
        "start": 0,
        "type": "Element",
      },
    ],
    "components": [],
    "directives": [],
    "helpers": Set {},
    "source": "<div>
        <p>{ first }</p>
        { second }
        { third }
        <p>{ forth }</p>
      </div>",
    "temps": 0,
    "type": 0,
  },
  "source": "<div>
        <p>{ first }</p>
        { second }
        { third }
        <p>{ forth }</p>
      </div>",
  "template": [],
  "type": 0,
}
`;
